force-app/main/default/objects/cdcpc__RD_TBL_ASME_Values__c/cdcpc__RD_TBL_ASME_Values__c.object-meta.xml
<CustomObject>
    <label>RD tblASMEValues</label>
    <nameField>
        <label>RD tblASMEValues</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RD tblASMEValues</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>