force-app/main/default/objects/cdcpc__RD_TBL_ASME_Values__c/fields/cdcpc__ASMEInletOption__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__ASMEInletOption__c</fullName>
    <label>ASMEInletOption</label>
    <length>255</length>
    <type>Text</type>
</CustomField>