force-app/main/default/objects/cdcpc__RD_TBL_ASME_Values__c/fields/cdcpc__ASMEOutOption__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__ASMEOutOption__c</fullName>
    <label>ASMEOutOption</label>
    <length>255</length>
    <type>Text</type>
</CustomField>