force-app/main/default/objects/cdcpc__RD_TBL_ASME_Values__c/fields/cdcpc__DPM__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__DPM__c</fullName>
    <label>DPM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>