force-app/main/default/objects/cdcpc__RD_TBL_ASME_Values__c/fields/cdcpc__HOC__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__HOC__c</fullName>
    <label>HOC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>