force-app/main/default/objects/cdcpc__RD_TBL_ASME_Values__c/fields/cdcpc__KR_Text__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__KR_Text__c</fullName>
    <label>KR_Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>