force-app/main/default/objects/cdcpc__RD_TBL_ASME_Values__c/fields/cdcpc__MNFAin2__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__MNFAin2__c</fullName>
    <label>MNFAin2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>