force-app/main/default/objects/cdcpc__RD_TBL_ASME_Values__c/fields/cdcpc__MNFAValue__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__MNFAValue__c</fullName>
    <label>MNFAValue</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>