force-app/main/default/objects/cdcpc__RD_TBL_ASME_Values__c/fields/cdcpc__SeatDesc__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__SeatDesc__c</fullName>
    <label>SeatDesc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>