force-app/main/default/objects/cdcpc__RD_TBL_ASME_Values__c/fields/cdcpc__SizingCertText__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__SizingCertText__c</fullName>
    <label>SizingCertText</label>
    <length>255</length>
    <type>Text</type>
</CustomField>