force-app/main/default/objects/cdcpc__RD_TBL_ASME_Values__c/fields/cdcpc__SizingKrText__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__SizingKrText__c</fullName>
    <label>SizingKrText</label>
    <length>255</length>
    <type>Text</type>
</CustomField>