force-app/main/default/objects/cdcpc__RD_TBL_ASME_Values__c/listViews/cdcpc__All.listView-meta.xml
<ListView>
    <fullName>cdcpc__All</fullName>
    <columns>NAME</columns>
    <columns>cdcpc__PTC__c</columns>
    <columns>cdcpc__DPM__c</columns>
    <columns>cdcpc__SZC__c</columns>
    <columns>cdcpc__STC__c</columns>
    <columns>cdcpc__MNFAin2__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>cdcpc__PTC__c</field>
        <operation>equals</operation>
        <value>GFS</value>
    </filters>
    <label>All</label>
</ListView>